--- a/Style-main.css
+++ b/Style-main.css
@@ -5,7 +5,7 @@
     margin-bottom: 0px;
     font-size: 25px;
     color: lightskyblue;
-    background-image: url(images/bcground.jpg);
+    background-image: url(images/bcg1.jpg);
 }
 
 a {
@@ -38,6 +38,7 @@ h3 {
 .container{
     width: 960px;
     height: 300px;
+    padding-top: 2px;
     margin: auto;
     margin-top: 150px;
     text-align: center;
