--- a/About_as/Style-About_as.css
+++ b/About_as/Style-About_as.css
@@ -50,7 +50,7 @@ h3 {
 .css3 {
     width: 50%;
     position: absolute;
-    bottom: 275px;
+    bottom: 255px;
     margin-left: 8px;
 }
 
@@ -61,7 +61,7 @@ h3 {
 .html5 {
     width: 50%;
     position: absolute;
-    top: 789px;
+    top: 748px;
     margin-left: 8px;
 }
 
@@ -74,7 +74,7 @@ h3 {
     position: absolute;
     margin-left: 8px;
     left: 570px;
-    top: -33px;
+    top: -13px;
 }
 
 #js {
@@ -85,7 +85,7 @@ h3 {
     width: 50%;
     position: absolute;
     margin-left: 8px;
-    bottom: 11px;
+    bottom: 21px;
     left: 570px;
 }
 
@@ -130,6 +130,7 @@ h3 {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    background: #2980B9;
 }
 
         /* Change color of dropdown links on hover */
