--- a/About_as/Style-About_as.css
+++ b/About_as/Style-About_as.css
@@ -12,7 +12,7 @@ body {
 h1 {
     font-size: 45px;
     text-align: center;
-    padding-top: 100px;
+    padding-top: 30px;
 }
 
 h4, h5, h6, h7, h8, h2 {
@@ -37,7 +37,7 @@ h3 {
 }
 
 .ruda {
-    color: #02F8A2;
+    color: #F70D0D;
 }
 
 /*Obrázky*/
