--- a/Contact/Style-Contact.css
+++ b/Contact/Style-Contact.css
@@ -1,3 +1,50 @@
-﻿body
-{
+﻿body {
+    background-image: url(images/Bcg1.jpg);
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 0px;
+    font-size: 25px;
+    color: lightskyblue;
+}
+
+h1 {
+    font-size: 45px;
+    text-align: center;
+    padding-top: 30px;
+}
+
+h4, h5, h6, h7, h8, h2 {
+    font-weight: normal;
+    font-size: 30px;
+}
+
+h3 {
+    color: steelblue;
+    text-shadow: 0 0 4px white, 2px -13px 15px #f20;
+}
+
+.container {
+    width: 890px;
+    height: 300px;
+    margin: auto;
+    margin-top: 100px;
+    text-align: center;
+}
+/*--------------------------------------------------*/
+
+.menu {
+    text-decoration: none;
+}
+
+.menu:hover {
+    cursor: pointer;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+h3, .menu {
+    color: midnightblue;
+    text-shadow: 0 0 4px white, 2px -13px 15px #f20;
+    font-weight: bold;
 }
