--- a/Contact/Style-Menu.css
+++ b/Contact/Style-Menu.css
@@ -17,6 +17,7 @@
 .dropdown {
     position: relative;
     display: inline-block;
+    padding-left: 15px;
 }
 
 /* Dropdown Content (Hidden by Default) */
